// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useDatabaseRecordSubscription hook > handle null record ID 1`] = `
[
  {
    "data": null,
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": null,
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
]
`;

exports[`useDatabaseRecordSubscription hook > manually call refetch once 1`] = `
[
  {
    "data": null,
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": {
      "createdAt": 1748759092442,
      "id": "settings::default",
      "lastPage": "/",
      "theme": "",
      "updatedAt": 1748759092442,
    },
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": {
      "createdAt": 1748759092442,
      "id": "settings::default",
      "lastPage": "/",
      "theme": "",
      "updatedAt": 1748759092442,
    },
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": {
      "createdAt": 1748759092442,
      "id": "settings::default",
      "lastPage": "/",
      "theme": "",
      "updatedAt": 1748759092442,
    },
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": {
      "createdAt": 1748759092442,
      "id": "settings::default",
      "lastPage": "/",
      "theme": "",
      "updatedAt": 1748759092442,
    },
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": {
      "createdAt": 1748759092442,
      "id": "settings::default",
      "lastPage": "/",
      "theme": "",
      "updatedAt": 1748759092442,
    },
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
]
`;

exports[`useDatabaseRecordSubscription hook > manually call setData 1`] = `
[
  {
    "data": null,
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": {
      "createdAt": 1748759092706,
      "id": "settings::default",
      "lastPage": "/",
      "theme": "",
      "updatedAt": 1748759092706,
    },
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": {
      "createdAt": 1748759092706,
      "id": "settings::default",
      "lastPage": "/",
      "theme": "",
      "updatedAt": 1748759092706,
    },
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": {
      "createdAt": 1748759092706,
      "id": "settings::default",
      "lastPage": "/",
      "theme": "",
      "updatedAt": 1748759092706,
    },
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": {
      "createdAt": 1748759092713,
      "id": "settings::default",
      "lastPage": "/manual",
      "theme": "manually-set-theme",
      "updatedAt": 1748759092713,
    },
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
]
`;

exports[`useDatabaseRecordSubscription hook > record ID changes from null to valid 1`] = `
[
  {
    "data": null,
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": null,
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": null,
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": null,
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": {
      "createdAt": 1748759091650,
      "id": "settings::default",
      "lastPage": "/",
      "theme": "",
      "updatedAt": 1748759091650,
    },
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": {
      "createdAt": 1748759091650,
      "id": "settings::default",
      "lastPage": "/",
      "theme": "",
      "updatedAt": 1748759091650,
    },
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
]
`;

exports[`useDatabaseRecordSubscription hook > record ID changes from valid to null 1`] = `
[
  {
    "data": null,
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": null,
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": null,
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": null,
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": {
      "createdAt": 1748759091913,
      "id": "settings::default",
      "lastPage": "/",
      "theme": "",
      "updatedAt": 1748759091913,
    },
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": {
      "createdAt": 1748759091913,
      "id": "settings::default",
      "lastPage": "/",
      "theme": "",
      "updatedAt": 1748759091913,
    },
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
]
`;

exports[`useDatabaseRecordSubscription hook > subscribe to existing record with known ID 1`] = `
[
  {
    "data": null,
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": {
      "createdAt": 1748759090860,
      "id": "settings::default",
      "lastPage": "/",
      "theme": "",
      "updatedAt": 1748759090860,
    },
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": {
      "createdAt": 1748759090860,
      "id": "settings::default",
      "lastPage": "/",
      "theme": "",
      "updatedAt": 1748759090860,
    },
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
]
`;

exports[`useDatabaseRecordSubscription hook > subscribe to non-existent record 1`] = `
[
  {
    "data": null,
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": null,
    "error": [Error: Record with id settings::nonexistent not found in table settings],
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
]
`;

exports[`useDatabaseRecordSubscription hook > subscription with dependencies that change 1`] = `
[
  {
    "data": null,
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": null,
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": null,
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": {
      "createdAt": 1748759092180,
      "id": "settings::default",
      "lastPage": "/",
      "theme": "",
      "updatedAt": 1748759092180,
    },
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": {
      "createdAt": 1748759092180,
      "id": "settings::default",
      "lastPage": "/",
      "theme": "",
      "updatedAt": 1748759092180,
    },
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": {
      "createdAt": 1748759092180,
      "id": "settings::default",
      "lastPage": "/",
      "theme": "",
      "updatedAt": 1748759092180,
    },
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
]
`;
